testsuite/tests/parser/should_fail/unpack_before_opr.hs
{-# LANGUAGE TypeOperators #-}

module UnpackBeforeOperator where

data a + b
data T = T { t :: {-# UNPACK #-} + Int }
