testsuite/tests/parser/should_fail/unpack_before_opr.stderr

unpack_before_opr.hs:6:34: error:
    Operator applied to too few arguments: +
